@@ -1,3 +1,8 @@
+2002-02-07  David N. Welton  <davidw@dedasys.com>
+
+	* src/TclWebapache.c (TclWebMakeURL): New command, extracted out
+	of rivetCore.c.
+
 2002-02-01  David N. Welton  <davidw@dedasys.com>
 
 	* src/rivetCore.c: Deleted rivet_info command.
